--- a/index.html
+++ b/index.html
@@ -1,35 +1,65 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Hangman Game</title>
+<head>
+    <title>The Psychic Game</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+</head>
+<body>
+    <div id="game">
+        <h1>The Psychic Game</h1>
+        <p>Guess What Letter I Am Thinking Of!</p>
+        <p>Total Wins: </p>
+        <p>Total Losses: </p>
+        <p>Guesses Left: </p>
+        <p>Your Guesses so far: </p>
+    </div>
+<script type="text/javascript">
+    var wins = 0;
+    var losses = 0;
+    var guessesLeft = 9;
+    var guessesSoFar = [];
+    var computerChoices = ['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's',
+    't', 'u', 'v', 'w', 'x', 'y', 'z'];
 
-      <!-- <script type="text/javascript" src="assets/javascript/game.js"></script> -->
-      <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    document.onkeyup = function(event) {
+        var userGuess = String.fromCharCode(event.keyCode).toLowerCase();
+        var computerGuess = computerChoices[Math.floor(Math.random()*computerChoices.length)];
+        guessesSoFar.push(userGuess);
+        if (userGuess == computerGuess) {
+            wins++;
+            alert('Way to go! You\'ve guesesed corrrectly. You Won!');
+            guessesLeft = 9;
+            guessesSoFar.length = 0;
+        }
+        else if (guessesLeft == 0){
+            losses++;
+            alert('You didn\'t guess the correct letter. You lost. Let\'s try again.');
+            guessesLeft = 9;
+            guessesSoFar.length = 0;
+        }
+        else if (userGuess !== computerGuess){
+            guessesLeft--;
+        }
 
-  </head>
-
-  <body>
-
-
-    <h1>HANGMAN DISNEY STYLE</h1>
-
-    <!-- COMMAND: when key pressed begin game -->
-    <p>Press Any Key To Get Started!</p>
-
-    <!-- COMMAND: start wins at 0, change number after game has been won  -->
-    <p>Wins</p>
-
-    <!-- COMMAND: generate word list, if word guessed correctly / if word guessed in correctly  -->
-    <p>Current Word</p>
-
-     <!-- COMMAND: generate number count down when letter buttons pressed  -->
-    <p>Number of Guesses Remaining</p>
-
-    <!-- COMMAND: show letters   -->
-    <p>Letters Already Guessed</p>
-
-
-  </body>
-  <script type="text/javascript" src="assets/javascript/game.js"></script>
+        var html = "<h1>The Psychic Game</h1>" +
+        "<h3>Guess What Letter I Am Thinking Of!</h3>" +
+        "<p>Wins: " +
+        wins +
+        "</p>" +
+        "<p>Losses: " +
+        losses +
+        "</p>" +
+        "<p>Guesses Remaining: " +
+        guessesLeft +
+        "</p>" +
+        "<p>Letters Already Chosen: " +
+        guessesSoFar +
+        "</p>"
+        ;
+        // Placing the html into the game ID
+        document.querySelector('#game').innerHTML = html;
+    }
+</script>
+</body>
 </html>
