--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
 <body>
     <div id="game">
         <h1>The Psychic Game</h1>
-        <p>Guess What Letter I Am Thinking Of!</p>
-        <p>Total Wins: </p>
-        <p>Total Losses: </p>
-        <p>Guesses Left: </p>
-        <p>Your Guesses so far: </p>
+        <h3>Guess What Letter I Am Thinking Of!</h3>
+
+        <br />
+
+        <p>Wins: </p>
+        <p>Losses: </p>
+        <p>Guesses Remaining: </p>
+        <p>Letters Already Chosen: </p>
     </div>
 <script type="text/javascript">
     var wins = 0;
